--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "migration:gen": "npm run typeorm -- migration:generate",
     "migration:run": "npm run typeorm -- migration:run",
     "migration:revert": "npm run typeorm -- migration:revert",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d src/config/database.config.ts",
+    "typeorm": "npx ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d src/config/database.config.ts",
     "test": "jest",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "seed": "ts-node -r tsconfig-paths/register scripts/seed.ts"
+    "seed": "npx ts-node -r tsconfig-paths/register scripts/seed.ts"
   },
   "keywords": [],
   "author": "",
