--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "sqlite3": "^5.1.7",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "xrpl": "^4.4.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.9",
