--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/throttler": "^5.2.0",
     "@nestjs/typeorm": "^10.0.2",
     "@types/passport-jwt": "^4.0.1",
+    "axios": "^1.12.1",
     "better-sqlite3": "^9.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
