--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "npx nest start --watch",
-    "dev:debug": "npx nest start --debug --watch",
-    "start:prod": "npm run build && node dist/main.js",
     "build": "npx nest build",
+    "build:watch": "npx nest build --watch",
+    "start:prod": "node dist/main.js",
+    "start:dev": "npx nodemon",
+    "dev": "concurrently \"npm run build:watch\" \"npm run start:dev\"",
+    "dev:debug": "nodemon --config nodemon-debug.json",
     "migration:gen": "npm run typeorm -- migration:generate",
     "migration:run": "npm run typeorm -- migration:run",
     "migration:revert": "npm run typeorm -- migration:revert",
@@ -16,7 +18,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "seed": "npx ts-node -r tsconfig-paths/register scripts/seed.ts"
-  },
+  },  
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -29,6 +31,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.20",
     "@nestjs/schedule": "^6.0.0",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/throttler": "^5.2.0",
     "@nestjs/typeorm": "^10.0.2",
@@ -60,6 +63,7 @@
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "@typescript-eslint/parser": "^8.43.0",
+    "concurrently": "^9.2.1",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
